# fullstack-proj

./: .env  .gitignore  Procfile  README.md  app.py  common.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt
html/: main.html
js/: main.js
pyenv/Scripts/: activate  activate.bat
static/: chess_frontend.js  main.css
static/js/: account.js  common.js  login.js  manageGames.js  signup.js  socket.js
templates/: about.html  accessDenied.html  account.html  extras.html  home.html  layout.html  rules.html  signup.html
