[tool.poetry]
name = "fullstack-proj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
python-chess = "^1.999"
chess = "^1.4.0"
pymongo = "^3.11.3"
flask-mongoengine = "^1.0.0"
mongoengine = "^0.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
