[tool.poetry]
name = "fullstack-proj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
python-chess = {extras = ["uci", "gaviota"], version = "^1.999"}
wheel = "^0.36.2"
flask-mongoengine = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
