[tool.poetry]
name = "fullstack-proj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
pymongo = "^3.11.3"
Flask-SocketIO = "^5.0.1"
Flask-Login = "^0.5.0"
Flask-Session = "^0.3.2"
gevent = "^21.1.2"
gevent-websocket = "^0.10.1"
pywebpush = "^1.11.0"
Flask-Table = "^0.5.0"
Flask-Bcrypt = "^0.7.1"
bcrypt = "^3.2.0"
rope = "^0.18.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
